Fixed overlapping React Components being clickable

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,7 +5,7 @@
   --text-primary: #b5b5b5b6;
   --text-secondary: #ececec;
   --bg-primary: #282c34;
-  --bg-secondary: #21252b;
+  --bg-secondary: #12181b;
   --nav-size: 60px;
   --transition-speed: 400ms;
 }
@@ -56,6 +56,7 @@ main {
 /* ################################# */
 .navbar {
   position: fixed;
+  z-index: 999;
   background-color: var(--bg-primary);
   display: flex;
   flex-direction: column;
@@ -136,6 +137,7 @@ main {
 }
 
 .nav-link:hover {
+    z-index: 999;
     filter: grayscale(0%) opacity(1);
     background: var(--bg-secondary);
     color: var(--text-secondary);
@@ -201,6 +203,7 @@ main {
 }
 
 #tile {
+    z-index: 10;
     flex-basis: 25%;
     font-size: 2vw;
 }
